formbricks/ingressroute-feedback.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: feedback.${dns_domain}
  namespace: formbricks
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`feedback.${dns_domain}`)
      kind: Rule
      services:
        - name: formbricks
          kind: Service
          port: 3000
      middlewares:  
        - name: error-pages
          namespace: traefik
